// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders List with title 1`] = `
<div
  className="list-wrapper"
>
  <header
    className="list-header"
  >
    <h4
      className="list-title"
    >
      list title
    </h4>
  </header>
  <ul
    className="list"
    compact={false}
  >
    <li
      className="list-item"
    >
      <div
        className="list-label"
      >
        label 1
      </div>
      <div
        className="list-value"
      >
        value 1
      </div>
    </li>
    <li
      className="list-item"
    >
      <div
        className="list-label"
      >
        label 2
      </div>
      <div
        className="list-value"
      >
        value 2
      </div>
    </li>
  </ul>
</div>
`;

exports[`renders tabbled List 1`] = `
<div
  className="list-wrapper"
>
  <dl
    className="list"
    compact={false}
  >
    <li
      className="list-item"
    >
      <div
        className="list-label"
      >
        label 1
      </div>
      <div
        className="list-value"
      >
        value 1
      </div>
    </li>
    <li
      className="list-item"
    >
      <div
        className="list-label"
      >
        label 2
      </div>
      <div
        className="list-value"
      >
        value 2
      </div>
    </li>
  </dl>
</div>
`;
